Closed Bug 889433 Opened 12 years ago Closed 12 years ago

crash in mozilla::ReentrantMonitorAutoEnter::~ReentrantMonitorAutoEnter @ libcutils.so@0x4f54 on Sony Xperia Z running JB 4.2

Categories

(Core :: Audio/Video, defect)

ARM
Android
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla25
Tracking Status
firefox22 --- affected
firefox23 + fixed
firefox24 --- fixed
firefox25 --- fixed

People

(Reporter: scoobidiver, Assigned: eflores)

References

Details

(Keywords: crash, topcrash, Whiteboard: [native-crash][leave open])

Crash Data

Attachments

(1 file, 1 obsolete file)

It's currently #26 crasher in 22.0 with a high rising tendency. It seems there's a recent update of Sony Xperia Z to JB 4.2 where Sony devices are not StageFright blocklisted. See https://wiki.mozilla.org/Blocklisting/Blocked_Graphics_Drivers#On_Android_2 Bug 860599 will land in 25.0 while a fix is required (Sony blocklist for JB 4.2) for 23.0 or even 22.0.1 if it enters top-10 crashers. Today's breakdown per devices is: Sony C6603 143 Sony C6602 43 Sony C6502 23 Sony C6503 19 Sony C6506 7 Sony L36h 1 Signature libcutils.so@0x4f54 More Reports Search UUID 4cff2364-8b88-476d-bd8c-39d862130702 Date Processed 2013-07-02 17:16:23.653206 Uptime 11 Last Crash 15 seconds before submission Install Age 604756 since version was first installed. Install Time 2013-06-25 17:16:58 Product FennecAndroid Version 22.0 Build ID 20130618033857 Release Channel release OS Android OS Version 0.0.0 Linux 3.4.0-gba62870 #1 SMP PREEMPT Mon May 27 09:22:25 2013 armv7l Sony/C6603_1270-6697/C6603 Build Architecture arm Build Architecture Info ARMv0 | None Crash Reason SIGBUS Crash Address 0x22b App Notes AdapterDescription: 'Qualcomm -- Adreno (TM) 320 -- OpenGL ES 2.0 V@14.0 AU@04.02.02.093.020 (CL@3579225) -- Model: C6603, Product: C6603_1270-6697, Manufacturer: Sony, Hardware: qcom' EGL? EGL+ GL Context? GL Context+ GL Layers? GL Layers+ Sony C6603 Sony/C6603_1270-6697/C6603:4.2.2/10.3.A.0.423/WP5_rg:user/release-keys Processor Notes sp-processor02_phx1_mozilla_com_24045:2012; exploitability tool: ERROR: unable to analyze dump EMCheckCompatibility True Adapter Vendor ID Qualcomm Adapter Device ID Adreno (TM) 320 Android CPU ABI armeabi-v7a Android Manufacturer Sony Android Model C6603 Android Version 17 (REL) Frame Module Signature Source 0 libcutils.so libcutils.so@0x4f54 1 libstagefright.so libstagefright.so@0x67021 2 libstagefright.so libstagefright.so@0x679cb 3 libc.so libc.so@0x114a1 4 dalvik-mark-stack (deleted) dalvik-mark-stack (deleted)@0x351d272 5 __properties__ (deleted) __properties__ (deleted)@0x56 6 __properties__ (deleted) __properties__ (deleted)@0x127e 7 libstagefright.so libstagefright.so@0x679cb 8 libomxplugin.so (deleted) libomxplugin.so (deleted)@0x23bf 9 libc.so libc.so@0xcfdf 10 libstdc++.so _Znwj 11 libstagefright.so libstagefright.so@0x66c3f 12 libc.so libc.so@0x42cb6 13 libstagefright.so libstagefright.so@0x12182e 14 libstagefright.so libstagefright.so@0x12182e 15 libstagefright.so libstagefright.so@0x66d31 16 dalvik-mark-stack (deleted) dalvik-mark-stack (deleted)@0x351d272 17 libstagefright.so libstagefright.so@0x12182e 18 libstagefright.so libstagefright.so@0x7d7ab 19 libxul.so mozilla::ReentrantMonitorAutoEnter::~ReentrantMonitorAutoEnter obj-firefox/dist/include/mozilla/ReentrantMonitor.h 20 libomxplugin.so (deleted) libomxplugin.so (deleted)@0x1dad More reports at: https://crash-stats.mozilla.com/report/list?product=FennecAndroid&signature=libcutils.so%400x4f54
With combined signatures, it's #9 top crasher in 22.0 and #38 in 23.0b1. Notice that the rank of crashes related to specific devices and OS versions are dependent of the channel populations. More reports also at: https://crash-stats.mozilla.com/report/list?product=FennecAndroid&signature=libstagefright.so%400x67021
tracking-fennec: --- → ?
Crash Signature: [@ libcutils.so@0x4f54] → [@ libcutils.so@0x4f54] [@ libstagefright.so@0x67021]
Keywords: topcrash
Version: 22 Branch → Trunk
This continues to rise, in yesterday's data, the two signatures are #4 and #13 in 22.0 release.
I checked our Sony C6603 it does not find the update to Android 4.2.2. In the meeting I was mistaken that libstagefright/h264 decoding was working on Android 4.1.2 (I thought we had fixed it :[ ). We likely need the band-aid in bug 845734 extended.
Chris - Can you help with comment 3?
Assignee: nobody → chris.double
Edwin is dealing with Android bugs for the near future.
Assignee: chris.double → edwin
It seems another blocklist patch will land in the latest Beta with all the involved risks.
Edwin can you prepare a blocklist patch that can be uplifted before next Monday's go to build for our fifth week of FF 23 Beta?
Flags: needinfo?(edwin)
Will do.
Flags: needinfo?(edwin)
tracking-fennec: ? → +
tracking-fennec: + → 23+
Attached patch 889433-blacklist-sony-4.2.patch (obsolete) — Splinter Review
This patch just blacklists everything Sony running Android 4.2.
Attachment #778244 - Flags: review?(chris.double)
Comment on attachment 778244 [details] [diff] [review] 889433-blacklist-sony-4.2.patch Oops. Rubbish in that one.
Attachment #778244 - Attachment is obsolete: true
Attachment #778244 - Flags: review?(chris.double)
THIS patch blacklists everything Sony running 4.2.
Attachment #778246 - Flags: review?(chris.double)
Comment on attachment 778246 [details] [diff] [review] 889433-blacklist-sony-4.2.patch Benoit has been the reviewer of blocklist patches.
Attachment #778246 - Flags: review?(chris.double) → review?(bjacob)
This blocklist isn't necessary in channels where bug 860599's big patch has landed. See also bug 845734.
Attachment #778246 - Flags: review?(bjacob) → review+
(In reply to Scoobidiver from comment #13) > This blocklist isn't necessary in channels where bug 860599's big patch has > landed. See also bug 845734. 860599 hasn't landed yet.
Comment on attachment 778246 [details] [diff] [review] 889433-blacklist-sony-4.2.patch [Approval Request Comment] Bug caused by (feature/regressing bug #): OEM User impact if declined: Crashy devices keep on crashing Testing completed (on m-c, etc.): Can not reproduce Risk to taking this patch (and alternatives if risky): H264 playback stops working on more devices than intended String or IDL/UUID changes made by this patch: None
Attachment #778246 - Flags: approval-mozilla-beta?
Attachment #778246 - Flags: approval-mozilla-aurora?
(In reply to Edwin Flores [:eflores] [:edwin] from comment #14) > 860599 hasn't landed yet. It's tracked for 23.0 and 24.0 so meaning release drivers want it to get uplifted unless it's too risky.
(In reply to Scoobidiver from comment #16) > (In reply to Edwin Flores [:eflores] [:edwin] from comment #14) > > 860599 hasn't landed yet. > It's tracked for 23.0 and 24.0 so meaning release drivers want it to get > uplifted unless it's too risky. Okay. But may as well land this on beta first to make sure it works just in case, then back it out at the same time as that patch landing.
Comment on attachment 778246 [details] [diff] [review] 889433-blacklist-sony-4.2.patch We should not land to Beta first, please uplift to branches and update the status flags, if we need to remove it we can do the necessary backouts - it's not ideal to skip a branch and risk dropping the ball on the next release if this is still needed there.
Attachment #778246 - Flags: approval-mozilla-beta?
Attachment #778246 - Flags: approval-mozilla-beta+
Attachment #778246 - Flags: approval-mozilla-aurora?
Attachment #778246 - Flags: approval-mozilla-aurora+
(In reply to lsblakk@mozilla.com [:lsblakk] from comment #18) > We should not land to Beta first, please uplift to branches and update the > status flags, if we need to remove it we can do the necessary backouts - > it's not ideal to skip a branch and risk dropping the ball on the next > release if this is still needed there. Sorry, I should have been clearer. By `first' I meant `before bug 860599'.
Based on the blocklist process, I've updated https://wiki.mozilla.org/Blocklisting/Blocked_Graphics_Drivers#On_Android_2 accordingly.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Oops, keep this open until we have a `real' fix for it.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Whiteboard: [native-crash] → [native-crash][leave open]
23+ ship has sailed. Need to re-triage this.
tracking-fennec: 23+ → ?
(In reply to Kevin Brosnan [:kbrosnan] from comment #24) > 23+ ship has sailed. Need to re-triage this. Why? This should be fixed for 23.
My fault; reopened the bug until a `proper' fix could be written but forgot to reset the tracking flags. Since then I've tried the patch from bug 860599, which seems to fix it; so it should be safe now to mark this resolved.
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
tracking-fennec: ? → ---
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: