Bug 889433 - Blocklist h264 playback on Sony devices running Android 4.2 r=doublec a=lsblakk