widget/android/GfxInfo.cpp
@@ -485,6 +485,14 @@ GfxInfo::GetFeatureStatusImpl(int32_t aFeature,
           return NS_OK;
         }
       }
+      else if (CompareVersions(mOSVersion.get(), "4.3.0") < 0)
+      {
+        // Blocklist all Sony devices
+        if (cManufacturer.Find("Sony", true) != -1) {
+          *aStatus = nsIGfxInfo::FEATURE_BLOCKED_DEVICE;
+          return NS_OK;
+        }
+      }
     }
   }
 
